--- a/OAuth.Web/Views/User/Edit.cshtml
+++ b/OAuth.Web/Views/User/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
 }
-@model UserDto
+@model User
 <div class="modal-content">
     <form class="form-horizontal aui" id="form1" action="" method="post">
         <div class="modal-header">
