--- a/OAuth.Web/Views/Home/Login.cshtml
+++ b/OAuth.Web/Views/Home/Login.cshtml
@@ -5,7 +5,7 @@
 <html >
 <head>
     <meta charset="utf-8">
-    <title>登录</title>
+    <title>用户登录</title>
     <!-- The styles -->
     <link href="~/assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/assets/css/login.css" rel="stylesheet" />
