--- a/OAuth.Web/Views/Home/Login.cshtml
+++ b/OAuth.Web/Views/Home/Login.cshtml
@@ -24,7 +24,7 @@
 
             <div class="row">
                 <div class="col-md-12 center login-header">
-                    <h2>欢迎</h2>
+                    <h2>欢迎用户登录</h2>
                 </div>
                 <!--/span-->
             </div><!--/row-->
