--- a/OAuth.Web/Views/Subject/Index.cshtml
+++ b/OAuth.Web/Views/Subject/Index.cshtml
@@ -1,8 +1,66 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "询价单列表";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Index</h2>
-
+@model PagedList<Item>
+@section Head{<link href="~/assets/bower_components/icheck/skins/minimal/red.css" rel="stylesheet" />}
+<div class="mod-navbar">
+    <div class="main-header">
+        <div class="title">
+            <h3>
+                <a href="javascript:;"><i class="icon icon-list"></i></a>
+                <a href="javascript:;">询价单列表</a>
+            </h3>
+        </div>
+    </div>
+    <div class="sub">
+        <div class="sub_toolbar">
+            <button class="btn btn-success btn-fancy btn-sm" onclick="uv.js_user_add(this)"><i class="glyphicon glyphicon-plus"></i> 发布工程</button>
+        </div>
+    </div>
+</div>
+<div class="navigator-results mCustomScrollbar" data-mcs-theme="dark">
+    <div class="frame">
+        <div class="frame-header">
+            <span class="title-breadcrumb">
+                <a href="javascript:;">询价单</a>
+            </span>
+        </div>
+        <hr class="m0" />
+        <div class="widget widget-mytask">
+            <div class="body">
+                <div class="line-item-container">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>工程名称</th>
+                                <th>起始日期</th>
+                                <th>结束日期</th>
+                                <th>发布日期</th>
+                                <th>备注</th>
+                                <th>编辑</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <th scope="row">@item.ItemName</th>
+                                <td>@item.StartDate</td>
+                                <td>@item.EndDate</td>
+                                <td>@item.InputTime</td>
+                                <td>@item.Memo</td>
+                                <td><button type="button" class="btn btn-default btn-xs" data-toggle="button" aria-pressed="false" autocomplete="off">编辑</button></td>
+                            </tr>
+                        }
+                        </tbody>
+                    </table>
+                    <div class="text-center">
+                        @Html.Pager(Model, new PagerOptions { PageIndexParameterName = "id", ContainerTagName = "ul", CssClass = "pagination", CurrentPagerItemTemplate = "<li class=\"active\"><a href=\"#\">{0}</a></li>", DisabledPagerItemTemplate = "<li class=\"disabled\"><a>{0}</a></li>", PagerItemTemplate = "<li>{0}</li>", Id = "bootstrappager" })
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
