--- a/OAuth.Web/Views/Subject/Index.cshtml
+++ b/OAuth.Web/Views/Subject/Index.cshtml
@@ -36,7 +36,7 @@
                             <tr>
                                 <th>工程名称</th>
                                 <th>起始日期</th>
-                                <th>结束日期</th>
+                                <th>截止日期</th>
                                 <th>发布日期</th>
                                 <th>备注</th>
                                 <th>编辑</th>
