--- a/OAuth.Web/Views/Shared/_Layout.cshtml
+++ b/OAuth.Web/Views/Shared/_Layout.cshtml
@@ -65,6 +65,8 @@
                 <ul class="nav nav-sidebar">
                     <li class="active"><a href="/Project"><i class="icon icon-cascades"></i>项目</a></li>
                     <li><a href="/User"><i class="icon icon-profile"></i>用户</a></li>
+                    <li><a href="/Subject/Supplier"><i class="icon icon-list"></i>供应商管理</a></li>
+
                 </ul>
             </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
