--- a/OAuth.Web/Views/Subject/Step1.cshtml
+++ b/OAuth.Web/Views/Subject/Step1.cshtml
@@ -31,52 +31,58 @@
             <div class="body">
                 <form class="form-horizontal aui" id="add_user_form" action="/User/Add" method="post">
                     <fieldset>
-                        <div class="row">
+                        <div class="row mt30">
                             <div class="col-lg-5">
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label">账户名</label>
-                                    <div class="col-sm-5">
-                                        <input type="text" name="UserName" class="form-control" datatype="*" />
+                                    <label class="col-md-4 control-label">账户名</label>
+                                    <div class="col-md-7">
+                                        <input type="text" name="UserName" class="form-control" datatype="*"/>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label">密码</label>
-                                    <div class="col-sm-5">
-                                        <input type="password" id="pwd1" name="Password" class="form-control" datatype="*6-16" />
+                                    <label class="col-md-4 control-label">密码</label>
+                                    <div class="col-md-7">
+                                        <input type="password" id="pwd1" name="Password" class="form-control" datatype="*6-16"/>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label">确认密码</label>
-                                    <div class="col-sm-5">
-                                        <input type="password" id="pwd2" name="Password1" class="form-control" datatype="*" recheck="Password" />
+                                    <label class="col-md-4 control-label">确认密码</label>
+                                    <div class="col-md-7">
+                                        <input type="password" id="pwd2" name="Password1" class="form-control" datatype="*" recheck="Password"/>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-5">
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label">姓名</label>
-                                    <div class="col-sm-5">
-                                        <input type="text" name="FullName" class="form-control" />
+                                    <label class="col-md-4 control-label">姓名</label>
+                                    <div class="col-md-7">
+                                        <input type="text" name="FullName" class="form-control"/>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label">电话号码</label>
-                                    <div class="col-sm-5">
-                                        <input type="text" name="PhoneNumber" class="form-control" datatype="m" ignore="ignore" errormsg="请输入正确的手机号码" />
+                                    <label class="col-md-4 control-label">电话号码</label>
+                                    <div class="col-md-7">
+                                        <input type="text" name="PhoneNumber" class="form-control" datatype="m" ignore="ignore" errormsg="请输入正确的手机号码"/>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-xs-12 col-xs-12">
+
+                                <div class="form-group">
+                                    
+                                    <button type="button" class="btn btn-default btn-sm" id="cancel" data-dismiss="modal">后退</button>
+                                    <button type="button" class="btn btn-primary btn-sm" id="sure">下一步</button>
+                                    @Html.AntiForgeryToken()
+                                </div>
+                            </div>
+                        </div>
+                        
+                        
                     </fieldset>
-                    @Html.AntiForgeryToken()
-                    <button type="button" class="btn btn-default btn-sm" id="cancel" data-dismiss="modal">关闭</button>
-                    <button type="button" class="btn btn-primary btn-sm" id="sure">保存</button>
                 </form>
-
-
-
             </div>
         </div>
-
     </div>
 </div>
