--- a/OAuth.Web/Views/Subject/Step2.cshtml
+++ b/OAuth.Web/Views/Subject/Step2.cshtml
@@ -1,8 +1,8 @@
 ﻿@model dynamic
 
 @{
-    ViewBag.Title = "title";
-    Layout = "_Layout";
+    ViewBag.Title = "询价单物料明细";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>title</h2>
