--- a/OAuth.Web/Views/Subject/Step2_1.cshtml
+++ b/OAuth.Web/Views/Subject/Step2_1.cshtml
@@ -16,7 +16,7 @@
     </div>
     <div class="sub">
         <div class="sub_toolbar">
-            <input type="file" class="filestyle" data-icon="false">
+            <input type="file" class="btn btn-danger" data-icon="false">
             <input class="btn btn-default" type="submit" value="导入型材询价单">
         </div>
     </div>
@@ -31,8 +31,8 @@
         <hr class="m0" />
         <div class="widget widget-mytask">
             <div class="body">
-                <div class="line-item-container">
-                    <table class="table">
+                <div class="line-item-container ">
+                    <table class="table table-bordered">
                         <thead>
                             <tr>
                                 <th>类别</th>
