--- a/OAuth.Web/Views/Subject/Step1.cshtml
+++ b/OAuth.Web/Views/Subject/Step1.cshtml
@@ -82,8 +82,8 @@
                         <div class="row">
                             <div class="col-xs-10 col-lg-10">
                                 <div class="col-md-offset-2 pl5">
-                                    <button type="button" class="btn btn-default btn-sm" id="cancel" data-dismiss="modal">后退</button>
-                                    <button type="button" class="btn btn-primary btn-sm" id="sure" onclick="uv.js_item_add(this)">下一步</button>
+                                    <button type="button" class="btn btn-default btn-sm" id="cancel">后退</button>
+                                    <button type="button" class="btn btn-primary btn-sm" id="sure" >下一步</button>
                                     @Html.AntiForgeryToken()
                                 </div>
                             </div>
