--- a/OAuth.Web/Views/Subject/Step2_1.cshtml
+++ b/OAuth.Web/Views/Subject/Step2_1.cshtml
@@ -30,7 +30,7 @@
         </div>
         <hr class="m0" />
         <div class="widget widget-mytask">
-            <div class="body">
+            <div class="frame-body">
                 <div class="line-item-container ">
                     <table class="table table-bordered">
                         <thead>
@@ -53,23 +53,24 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <th scope="row">型材</th>
-                                <td>直板尺</td>
-                                <td>@@2M/只</td>
-                                <td>塑料</td>
-                                <td>国标</td>
-                                <td>@@2</td>
-                                <td>@@2</td>
-                                <td>@@20</td>
-                                <td>@@200.00</td>
-                                <td>@@2016-03-21</td>
-                                <td>理计</td>
-                                <td>现款</td>
-                                <td>货到付款</td>
-                                <td>含税</td>
-                                <td>测试物料</td>
-                            </tr>
+                        <tr>
+                            <th scope="row">型材</th>
+                            <td>直板尺</td>
+                            <td>@@2M/只</td>
+                            <td>塑料</td>
+                            <td>国标</td>
+                            <td>@@2</td>
+                            <td>@@2</td>
+                            <td>@@20</td>
+                            <td>@@200.00</td>
+                            <td>@@2016-03-21</td>
+                            <td>理计</td>
+                            <td>现款</td>
+                            <td>货到付款</td>
+                            <td>含税</td>
+                            <td>测试物料</td>
+                        </tr>
+
                         </tbody>
                     </table>
                     <div class="text-center">
