--- a/OAuth.Web/Views/User/Add.cshtml
+++ b/OAuth.Web/Views/User/Add.cshtml
@@ -7,34 +7,40 @@
         <div class="modal-body">
             <fieldset>
                 <div class="form-group">
+                    <label class="col-sm-3 control-label">电子邮件</label>
+                    <div class="col-sm-5">
+                        <input type="text" name="Email" class="form-control" datatype="e" />
+                    </div>
+                </div>
+                <div class="form-group">
                     <label class="col-sm-3 control-label">账户名</label>
                     <div class="col-sm-5">
-                        <input type="text" name="UserName" class="form-control" datatype="*" />
+                        <input type="text" name="UserName" class="form-control" datatype="*"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">密码</label>
                     <div class="col-sm-5">
-                        <input type="password" id="pwd1" name="Password" class="form-control" datatype="*6-16" />
+                        <input type="password" id="pwd1" name="Password" class="form-control" datatype="*6-16"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">确认密码</label>
                     <div class="col-sm-5">
-                        <input type="password" id="pwd2" name="Password1" class="form-control" datatype="*" recheck="Password" />
+                        <input type="password" id="pwd2" name="Password1" class="form-control" datatype="*" recheck="Password"/>
                     </div>
                 </div>
-                <hr />
+                <hr/>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">姓名</label>
                     <div class="col-sm-5">
-                        <input type="text" name="FullName" class="form-control" />
+                        <input type="text" name="FullName" class="form-control"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">电话号码</label>
                     <div class="col-sm-5">
-                        <input type="text" name="PhoneNumber" class="form-control" datatype="m" ignore="ignore" errormsg="请输入正确的手机号码" />
+                        <input type="text" name="PhoneNumber" class="form-control" datatype="m" ignore="ignore" errormsg="请输入正确的手机号码"/>
                     </div>
                 </div>
             </fieldset>
