--- a/OAuth.Web/Views/User/Edit.cshtml
+++ b/OAuth.Web/Views/User/Edit.cshtml
@@ -10,7 +10,13 @@
         </div>
         <div class="modal-body">
             <fieldset>
-                <input type="hidden" name="Id" value="@Model.Id" />
+                <input type="hidden" name="Id" value="@Model.Id"/>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Email</label>
+                    <div class="col-sm-5">
+                        <input type="text" name="Email" class="form-control" datatype="e" value="@Model.Email" />
+                    </div>
+                </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">账户名</label>
                     <div class="col-sm-5">
