--- a/OAuth.Web/Views/User/Index.cshtml
+++ b/OAuth.Web/Views/User/Index.cshtml
@@ -71,7 +71,7 @@
             <i class="icon icon-edit"></i>
             <span>编辑</span>
         </a>
- 
+
         <a href="javascript:;" class="name" onclick="uv.js_reset_pass(this)">
             <i class="icon icon-link"></i>
             <span>重置密码</span>
@@ -98,6 +98,8 @@
                     <h4>${UserName}</h4>
                 </div>
                 <div class="entry-desc">
+                    <p>Email：${Email}</p>
+
                     <p>姓名：${FullName}</p>
                     <p>电话：${PhoneNumber}</p>
                     <p>
@@ -132,6 +134,10 @@
 <script type="text/x-jquery-tmpl" id="user_edit">
     <form class="user-add-form aui" id="form1" action="" method="post">
         <fieldset>
+            <div class="form-group">
+                <label class="control-label">Email</label>
+                <input type="text" name="Email" class="form-control" datatype="e" value="${Email}" />
+            </div>
             <div class="form-group">
                 <label class="control-label">账户名</label>
                 <input type="text" name="UserName" class="form-control" datatype="*" value="${UserName}" />
