--- a/OAuth.Web/Views/Subject/Index.cshtml
+++ b/OAuth.Web/Views/Subject/Index.cshtml
@@ -51,7 +51,7 @@
                                 <td>@item.EndDate</td>
                                 <td>@item.InputTime</td>
                                 <td>@item.Memo</td>
-                                <td><button type="button" class="btn btn-default btn-xs" data-toggle="button" aria-pressed="false" autocomplete="off">编辑</button></td>
+                                <td><button type="button" class="btn btn-default btn-xs" onclick='javascript:window.location.href="/subject/step1/@item.Id"' data-toggle="button" aria-pressed="false" autocomplete="off">编辑</button></td>
                             </tr>
                         }
                         </tbody>
